--- a/policygenerator/kustomize/policyGenerator.yaml
+++ b/policygenerator/kustomize/policyGenerator.yaml
@@ -9,32 +9,18 @@ policyDefaults:
   placement:
     name: demo-placement-rule
     clusterSelectors:
-      name: local-cluster
+      matchExpressions:
+        - key: data-protection
+          operator: In
+          values:
+            - kasten
+        - key: vendor
+          operator: In
+          values:
+            - OpenShift
   remediationAction: inform
   severity: medium
 policies:
-  - name: policy-app
-    manifests:
-      - path: policy1_deployment
-        patches:
-          - apiVersion: apps/v1
-            kind: Deployment
-            metadata:
-              name: gitops-demo
-              namespace: gitops-demo
-            spec:
-              template:
-                spec:
-                  containers:
-                    - name: gitops-demo
-                      image: quay.io/centos7/httpd-24-centos7:2.4
-  - name: policy-gatekeeper-require-labels
-    consolidateManifests: false
-    manifests:
-      - path: policy2_gatekeeper/gatekeeper.yaml
-  - name: policy-kyverno-require-labels
-    manifests:
-      - path: policy3_kyverno/kyverno.yaml
   - name: policy-kasten-immutable-profiles
     manifests:
       - path: kasten-policies/kasten-immutable-location-profile.yaml
