narrow kasten kyverno location profile policy to kasten namespace

--- a/policygenerator/kustomize/kasten-policies/kasten-immutable-location-profile.yaml
+++ b/policygenerator/kustomize/kasten-policies/kasten-immutable-location-profile.yaml
@@ -22,6 +22,8 @@ spec:
       - resources:
           kinds:
           - config.kio.kasten.io/v1alpha1/Profile
+          namespaces:
+          - kasten-io
     validate:
       message: "Location Profile does not have immutability enabled (err: did not find 'protectionPeriod')"
       pattern:
